feature(用户模板): 增加工具类，增加文档
新增加工具类，测试提交工具

Closes null

--- a/shop_project/shop_common/document/项目记录文档.md
+++ b/shop_project/shop_common/document/项目记录文档.md
@@ -1,4 +1,4 @@
-# 商城项目开发文档
+# 个人项目开发文档
 ## 项目说明
 此项目架构设计架构为分布式微服务应用，旨在练习微服务使用及技术提升。  
 微服务框架使用 spring cloud，数据库使用mongdb，mysql，缓存使用redis，搜索使用es，队列使用kafuka，权限框架使用shiro，  
@@ -6,8 +6,7 @@
 ## 开发过程
 ### day1
 1. 项目说明：项目搭建，使用idea 创建springboot项目，创建父子工程，父子工程网上说的很多，但是很多技术文档没有说明关键点。  
-首先是夫项目的定义：父子项目搭建首先创建父项目，父项目无所谓什么类型的项目，只是一个载体，在我理解可以将一些子项目的公共maven引用放入父pom中，
-以此来简化子项目，但是我感觉此方式还是很不足，此方式意味只要创建的子项目都必定会加载父项目配置，拓展性会不足.
+首先是夫项目的定义：父子项目搭建首先创建父项目，父项目无所谓什么类型的项目，只是一个载体，在我理解可以将一些子项目的公共maven引用放入父pom中， 以此来简化子项目。
 2. 项目创建： 创建父工程，此工程只作为容器使用，不发挥任何功能，所以可以删除src目录和其他无用文件，保留文件时需保留.idea文件夹和.iml文件，
 否则创建工程的时候不出来
 3. 创建common功能，此项目为工具项目，用以检验项目间代码引用是否正常，创建项目后，需将common项目中的pom的修改为父工程的信息
@@ -43,5 +42,8 @@
 以后分库分表也更方便，分库分表后，每个库/表会对应一个租户及租户相关的数据
 3. 表结构设计，租户表、用户表、角色表、权限表、角色权限表、用户角色表。sql放入user模块下。
 ### day3
-1. 
+1. 加入工具类，mybatis-plus、log4j、redis等
+2. 测试用户功能
+3. 前端完成登录页面雏形
+4. 加入git
 
