feature(基础功能): 测试基础类接口
基础类接口功能测试

BREAKING CHANGE: 基础功能

--- a/shop_project/shop_common/document/项目记录文档.md
+++ b/shop_project/shop_common/document/项目记录文档.md
@@ -48,3 +48,8 @@
 4. 加入git
 ### day4
 1. 多租户模式db设计，增加tenant表，基础方法增加tenant_id字段
+### day5
+1. 增加基础mapper类及基础service类，增加查询默认值，后续增加tenantId字段做默认值
+2. 增加同时携带tenantId的查询以及携带isDeleted字段查询的默认查询·
+### day6
+1.
