feature(用户模块): 用户模板功能增加 增加注册及登录功能 增加租户方法

--- a/shop_project/shop_common/document/项目记录文档.md
+++ b/shop_project/shop_common/document/项目记录文档.md
@@ -1,10 +1,9 @@
-# 个人项目开发文档
+# 笔记
 ## 项目说明
 此项目架构设计架构为分布式微服务应用，旨在练习微服务使用及技术提升。  
 微服务框架使用 spring cloud，数据库使用mongdb，mysql，缓存使用redis，搜索使用es，队列使用kafuka，权限框架使用shiro，  
 集合微信公众号，web端，app目前不考虑增加，构建此商城项目，部分功能集成B端工作流（使用Activiti）
-## 开发过程
-### day1
+
 1. 项目说明：项目搭建，使用idea 创建springboot项目，创建父子工程，父子工程网上说的很多，但是很多技术文档没有说明关键点。  
 首先是夫项目的定义：父子项目搭建首先创建父项目，父项目无所谓什么类型的项目，只是一个载体，在我理解可以将一些子项目的公共maven引用放入父pom中， 以此来简化子项目。
 2. 项目创建： 创建父工程，此工程只作为容器使用，不发挥任何功能，所以可以删除src目录和其他无用文件，保留文件时需保留.idea文件夹和.iml文件，
@@ -33,23 +32,15 @@
     <scope>compile</scope>
 </dependency>
 ```
-6. 经测试，user项目可引用common项目中代码，项目初步雏形搭建完成
+### 用户注册及登录方案  
+#### 用户密码生成：
+采用md5+随机盐的方式生成，盐值为用户注册ip  
+#### 用户登录信息保存：
+token+redis  
 
-
-### day2
-1. 确认用户模块功能，用户模块应包括，用户注册，用户登录，角色及权限等功能
-2. 架构设计，saas模式的多租户模式，”多租户模式“：使用共享数据结构，tenantId字段隔离的方式，就是使用一张表，增加一个tenantId字段做数据隔离，
-以后分库分表也更方便，分库分表后，每个库/表会对应一个租户及租户相关的数据
-3. 表结构设计，租户表、用户表、角色表、权限表、角色权限表、用户角色表。sql放入user模块下。
-### day3
-1. 加入工具类，mybatis-plus、log4j、redis等
-2. 测试用户功能
-3. 前端完成登录页面雏形
-4. 加入git
-### day4
-1. 多租户模式db设计，增加tenant表，基础方法增加tenant_id字段
-### day5
-1. 增加基础mapper类及基础service类，增加查询默认值，后续增加tenantId字段做默认值
-2. 增加同时携带tenantId的查询以及携带isDeleted字段查询的默认查询·
-### day6
-1.
+附：token+redis还是jwt的选择  
+看了网上关于很多jwt还是token+redis的争论，整理了一下发下自己的理解  
+jwt是去中心化的，只要两个服务，使用相同解密方式，就可以确认用户登录，鉴权等操作，但是由于jwt一旦下发无法撤回的问题，如果用户注销了，需要手动配置黑名单等方法实现用户注销功能
+简单的来说，JWT相比传统的token方案最大的优点是验证过程不依赖其他服务。  
+token+redis的操作是传统的方案，由专门的服务去获取用户数据，因为比jwt多一次与redis 的IO过程，redis就成了瓶颈，与jwt相比呢，就是好操作，注销直接删除redis中内容就行  
+因当前系统是没有很多复杂子系统调用，后续的服务调用也是考虑通过rpc调用用户服务获取用户数据，所以还是采用token+redis的方式
