--- a/shop_project/document/用户模块设计.md
+++ b/shop_project/document/用户模块设计.md
@@ -19,3 +19,16 @@
 管理租户可新增删除集团，集团租户可管理集团下用户，个人用户只管理自己
 
 用户是个人，个人可以创建多个圈子（租户可以是一个家庭、一个班级、服务于多个人的组织），租户中也有管理员，类似于qq群的概念
+
+管理租户和个人租户每个类型只有一个，集团租户由管理租户创建
+
+用户注册时，管理租户下用户创建由管理租户下的管理员创建，个人租户下凭手机号创建，集团租户下由集团管理员创建
+创建集团时同时需创建集团管理员
+
+角色：集团管理员角色,集团用户角色
+用户：个人用户，集团用户，管理集团用户
+资源：页面资源、接口资源、菜单资源
+角色资源：角色拥有资源
+
+
+页面展示：
