feature(用户服务): 修改登录服务，配置迁移至本服务

--- a/shop_project/document/项目记录文档.md
+++ b/shop_project/document/项目记录文档.md
@@ -47,3 +47,17 @@ token+redis的操作是传统的方案，由专门的服务去获取用户数据
 
 ### 用户权限模块设计
 权限基础设计为 角色表，资源表，角色资源表，用户角色表，以此为基础进行设计，但是此项目为了以后扩展，还是使用Spring Security来做权限框架，加入Oauth2
+
+
+zk做分布式锁
+
+失败是有流程的
+下订单的时候是分步骤的，如果在其中某一个步骤失败了，就把这个数据退到回退流程中去
+例如：订单有：支付完成-》创建订单-》创建物流信息-》优惠券失效-》新增积分-》完成后状态生效。这些流程
+如果订单在某个流程失败了，比如在新增积分时失败了。
+会将这条数据进入回滚流程
+优惠券失效恢复-》物流信息删除-》订单删除-》支付金额回退
+
+分布式理论：
+将大业务抽分成各个小业集群保证高可用，
+增加熔断等措施，保证请求不会被阻塞保证本服务的高可用
