feature(file):文档更新

--- a/shop_project/document/项目记录文档.md
+++ b/shop_project/document/项目记录文档.md
@@ -46,7 +46,7 @@ token+redis的操作是传统的方案，由专门的服务去获取用户数据
 因当前系统是没有很多复杂子系统调用，后续的服务调用也是考虑通过rpc调用用户服务获取用户数据，所以还是采用token+redis的方式
 
 ### 用户权限模块设计
-权限基础设计为 角色表，资源表，角色资源表，用户角色表，以此为基础进行设计，但是此项目为了以后扩展，还是使用Spring Security来做权限框架，加入Oauth2
+权限基础设计为 角色表，资源表，角色资源表，用户角色表，以此为基础进行设计，但是此项目为了以后扩展，还是使用shiro来做权限框架
 
 
 zk做分布式锁
