--- a/shop_project/document/项目记录文档.md
+++ b/shop_project/document/项目记录文档.md
@@ -61,10 +61,10 @@ zk做分布式锁
 分布式理论：
 将大业务抽分成各个小业集群保证高可用，
 增加熔断等措施，保证请求不会被阻塞保证本服务的高可用
+跟着项目做一遍，所有的内容移动进来
 
-### 项目升级为springboot3
 
-### 增加定时任务调用
+### 增加定时任务调用 完成
 
 ## 用户注册
 
